--- a/client/src/styles/globals.scss
+++ b/client/src/styles/globals.scss
@@ -11,7 +11,7 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-  
+
 }
 
 button {
@@ -40,4 +40,8 @@ button {
   }
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+}
 
